--- a/src/style/App.scss
+++ b/src/style/App.scss
@@ -1,23 +1,16 @@
-a { text-decoration: none; }
-a:visited { text-decoration: none; }
-a:hover { text-decoration: none; }
-a:focus { text-decoration: none; }
-a:hover, a:active { text-decoration: none; }
-
 .root-container {
-  display: flex;
-  flex-direction: column;
   width: 100%;
   height: 100vh;
-  min-height: 100vh;
+
+  // this does eliminate some small mobile devices
+  min-width: 300px; 
+  font-family: Avenir;
   overflow: hidden;
 }
 
+// defines the height of our nav
 .nav-shaper {
-  min-width: 100%;
-  width: 100%;
   height: 75px;
-  flex: 0 0 75px;
 }
 
 .root-content {
@@ -26,13 +19,10 @@ a:hover, a:active { text-decoration: none; }
   overflow: hidden;
 }
 
-.content-display {
-  width: 100%;
-  height: 100%;
-}
-
 .mobile-button {
+  // button position shouldn't be derived from anything
   position: fixed;
+  // make sure the button is always on top
   z-index: 10000;  
   bottom: 0;
   right: 0;
