add pre-wrap behavior to markdown style

--- a/src/style/oceanic.scss
+++ b/src/style/oceanic.scss
@@ -19,6 +19,7 @@ pre[class*="language-"] {
   color: white;
   margin: 30px 0 !important;
   border-radius: 5px;
+  white-space: pre-wrap;
 }
 
 pre[class*="language-"] {
