update font to be inline with the main site

--- a/src/style/DevSite.scss
+++ b/src/style/DevSite.scss
@@ -4,7 +4,9 @@
 
   // this does eliminate some small mobile devices
   min-width: 300px; 
-  font-family: Avenir;
+  font-family: "Roboto", "Helvetica", "Arial", sans-serif;
+  font-weight: normal;
+  letter-spacing: 0.03125em;
   overflow: hidden;
 }
 
