--- a/src/style/SidebarContent.scss
+++ b/src/style/SidebarContent.scss
@@ -5,7 +5,7 @@
 
   &-category {
     // TODO: Replace with global style and rem
-    font-family: Avenir;
+    font-family: Roboto;
     font-style: bold;
     font-weight: 800;
   }
