switch header to link back to main site

--- a/src/style/Nav.scss
+++ b/src/style/Nav.scss
@@ -1,3 +1,11 @@
+.unselectable {
+  user-select: none;
+  -moz-user-select: none;
+  -khtml-user-select: none;
+  -webkit-user-select: none;
+  -o-user-select: none;
+}
+
 .nav-bar {
   display: flex;
   justify-content: left;
