update Nav to use Reshuffle black color

--- a/src/style/Nav.scss
+++ b/src/style/Nav.scss
@@ -16,7 +16,7 @@
   min-width: 300px;
 
   // TODO: Replace with global color
-  background-color: #3A3535;
+  background-color: #202020;
 
   &-content {
     display: flex;
