--- a/src/style/Nav.scss
+++ b/src/style/Nav.scss
@@ -25,10 +25,20 @@
     width: calc(100% - 300px);
   }
 
-  &-title {
-    // with this width the title is always displayed
-    min-width: 130px;
+  &-logo {
+    display: block;
+    min-width: 200px;
     margin-left: 20px;
+  }
+
+  &-mini-logo {
+    display: none;
+    min-width: 80px;
+    margin-left: 20px;
+  }
+
+  &-doclink {
+    margin-left: 10px;
   }
 
   &-icons {
@@ -53,14 +63,26 @@
   }
 }
 
+.logo-container {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: row;
+  white-space: nowrap;
+}
+
 @media only screen and (max-width: 800px) {
   .nav-bar {
     &-content {
       width: 100%;
     }
 
-    &-title {
-      margin-left: 10px;
+    &-logo {
+      display: none;
+    }
+
+    &-mini-logo {
+      display: block;
     }
 
     &-icons {
