--- a/src/style/SidebarContent.scss
+++ b/src/style/SidebarContent.scss
@@ -1,7 +1,7 @@
 .sidebar {
   height: 100%;
   width: 100%;
-  overflow-y: scroll;
+  overflow-y: auto;
 
   &-category {
     // TODO: Replace with global style and rem
