--- a/src/style/oceanic.scss
+++ b/src/style/oceanic.scss
@@ -304,3 +304,15 @@ blockquote p {
   @extend .example;
   background: rgba(191, 0, 0, 0.4);
 }
+
+img[alt$="-maxwidth"]{
+  width:  100%;
+  max-width: 800px;
+}
+
+@media only screen and (max-width: 800px) {
+  img[alt$="-maxwidth"]{
+    width:  100%;
+    max-width: 500px;
+  }
+}
