--- a/src/style/oceanic.scss
+++ b/src/style/oceanic.scss
@@ -308,6 +308,7 @@ blockquote p {
 img[alt$="-maxwidth"]{
   width:  100%;
   max-width: 800px;
+  border: 1px solid rgba(0, 0, 0, 0.7);
 }
 
 @media only screen and (max-width: 800px) {
