--- a/src/style/SidebarContent.scss
+++ b/src/style/SidebarContent.scss
@@ -75,8 +75,23 @@
   }
 
   &-category-subitem {
-    margin-bottom: 3%;
+    margin: 5% 0;
+
+    .subitem {
+      color: black;
+      text-decoration: none;
+    }
+
+    .subitem-active {
+      width: 4px;
+      height: 25px;
+      border-left: 3px solid #16ac60;
+      padding-left: 16px;
+      left: 0;
+      margin-top: -3px;
+    }
   }
+
 
   // remove default link styling and add small margin
   &-standalone-item {
