--- a/src/style/oceanic.scss
+++ b/src/style/oceanic.scss
@@ -22,12 +22,6 @@ pre[class*="language-"] {
   white-space: pre-wrap;
 }
 
-pre[class*="language-"] {
-  padding: 1em;
-  margin: 0.5em 0;
-  overflow: auto;
-}
-
 pre[class*="language-"]::-moz-selection,
 pre[class*="language-"] ::-moz-selection,
 code[class*="language-"]::-moz-selection,
@@ -47,6 +41,34 @@ code[class*="language-"] ::selection {
 :not(pre) > code[class*="language-"] {
   padding: 0.1em;
   border-radius: 0.3em;
+}
+
+pre[class*="language-"] {
+  padding: 1em;
+  position: relative;
+  overflow: visible;
+  border-radius: 5px;
+}
+
+pre[class*="language-"] .copy {
+  content: "copy";
+  padding: 2px 10px 0;
+  position: absolute;
+  top: 0;
+  right: 0;
+  transform: translate(-10px, -90%);
+  border-top-left-radius: 5px;
+  border-top-right-radius: 5px;
+  color: white;
+  background: #1b2b34;
+  cursor: pointer;
+  transition: all 200ms ease;
+}
+pre[class*="language-"]:hover .copy {
+  transform: translate(-10px, -100%);
+}
+pre[class*="language-"]:hover .copy:hover {
+  color: gray;
 }
 
 .token.comment,
