--- a/src/style/oceanic.scss
+++ b/src/style/oceanic.scss
@@ -1,7 +1,7 @@
 code[class*="language-"],
 pre[class*="language-"] {
-  font-family: source-code-pro,Menlo,Monaco,Consolas,'Courier New', monospace;
-  font-size: 13px;
+  font-family: "source-code-pro";
+  font-size: 16px;
   line-height: 1.375;
   direction: ltr;
   text-align: left;
