hover state only for copy button

--- a/src/style/oceanic.scss
+++ b/src/style/oceanic.scss
@@ -66,7 +66,7 @@ pre[class*="language-"] .copy {
   cursor: pointer;
   transition: all 200ms ease;
 }
-pre[class*="language-"]:hover .copy {
+pre[class*="language-"] .copy:hover {
   transform: translate(-10px, -100%);
 }
 pre[class*="language-"]:hover .copy:hover {
