--- a/src/style/SidebarContent.scss
+++ b/src/style/SidebarContent.scss
@@ -98,14 +98,11 @@
     }
 
     &-active {
-      height: 10%;
+      height: 24px;
+      padding-left: 16px;
       position: absolute;
       left: 15px;
       border-left: 3px solid #16ac60;
-      
-      @media only screen and (max-width: 1100px) {
-        left: 0;
-      }
     }
   }
 
