added bold text to current doc

--- a/src/style/SidebarContent.scss
+++ b/src/style/SidebarContent.scss
@@ -96,6 +96,10 @@
       color: #000;
       text-decoration: none;
     }
+    
+    &-active-text {
+      font-weight: bold;
+    }
 
     &-active {
       height: 24px;
