move standalone items to match other items

--- a/src/style/SidebarContent.scss
+++ b/src/style/SidebarContent.scss
@@ -82,7 +82,9 @@
   &-standalone-item {
     color: inherit;
     text-decoration: inherit;
-    margin-bottom: 3%;
+    margin-left: 10%;
+    margin-right: 10%;
+    margin-top: 10%;
   }
 
   // keep this human sized
