--- a/src/style/SidebarContent.scss
+++ b/src/style/SidebarContent.scss
@@ -2,7 +2,12 @@
   height: 100%;
   width: 100%;
   overflow-y: auto;
-
+  
+  &-default-margin {
+    margin-left: 10%;
+    margin-right: 10%;
+  }
+  
   &-category {
     // TODO: Replace with global style and rem
     font-family: Roboto;
@@ -11,14 +16,10 @@
   }
 
   &-content {
-    margin-left: 10%;
-    margin-right: 10%;
     margin-top: 20%;
   }
 
   &-responsive-content {
-    margin-left: 10%;
-    margin-right: 10%;
     margin-top: 10%;
     padding-bottom: 100px;
   }
@@ -82,8 +83,6 @@
   &-standalone-item {
     color: inherit;
     text-decoration: inherit;
-    margin-left: 10%;
-    margin-right: 10%;
     margin-top: 10%;
   }
 
